Fix album grid alignment by switching to flex layout

--- a/assets/styles/layout.scss
+++ b/assets/styles/layout.scss
@@ -66,6 +66,9 @@ table {
 }
 
 .albums-view {
+    display: flex;
+    flex-wrap: wrap;
+    align-content: flex-start;
     overflow-y: scroll;
 }
 
@@ -209,7 +212,9 @@ thead {
   --  6. Albums view ----------------------------------------------------------
 */
 .album-container {
-    display: inline-block;
+    display: block;
+    flex: 0 0 50%;
+    max-width: 50%;
     box-sizing: border-box;
     width: 50%;
 
@@ -606,6 +611,8 @@ table.form {
 @media all and (min-width: 500px) {
     /* --  4. Views -- */
     .album-container {
+        flex-basis: 33.33%;
+        max-width: 33.33%;
         width: 33.33%;
 
         // padding-top: 33.33%;
@@ -619,6 +626,8 @@ table.form {
 @media all and (min-width: 700px) {
     /* --  4. Views -- */
     .album-container {
+        flex-basis: 25%;
+        max-width: 25%;
         width: 25%;
 
         // padding-top: 25%;
@@ -773,6 +782,8 @@ table.form {
 
     /* --  4. Views -- */
     .album-container {
+        flex-basis: 20%;
+        max-width: 20%;
         width: 20%;
     }
 
@@ -889,6 +900,8 @@ table.form {
 
     /* --  4. Views -- */
     .album-container {
+        flex-basis: 16.66%;
+        max-width: 16.66%;
         width: 16.66%;
 
         // padding-top: 16.66%;
@@ -940,6 +953,8 @@ table.form {
 
     /* --  4. Views -- */
     .album-container {
+        flex-basis: 12.5%;
+        max-width: 12.5%;
         width: 12.5%;
 
         // padding-top: 12.5%;
